# mep-poc

./: CMakeLists.txt  make.ps1  readme.md
aep/: CMakeLists.txt
aep/inc/: ast.hpp  evaluator.hpp  lexer.hpp  parser.hpp  visitor.hpp
aep/src/: lexer.cpp  parser.cpp
console/: CMakeLists.txt  main.cpp
experimental/: MEPLexer.g4  MEPParser.g4  codegen.ps1  experimental.sln  m1.g4  sample1.math
experimental/.antlr/: MEPLexer.interp  MEPLexer.java  MEPLexer.tokens  MEPParser.interp  MEPParser.java  MEPParser.tokens  m1.interp  m1.tokens  m1Lexer.interp  m1Lexer.java  m1Lexer.tokens  m1Parser.java
experimental/lexgen/: DFA.cs  NFA.cs  Program.cs
experimental/playground/: Program.cs  playground.csproj
experimental/playground/codegen/: MEPLexer.cs  MEPLexer.interp  MEPLexer.tokens  m1.interp  m1.tokens  m1BaseListener.cs  m1BaseVisitor.cs  m1Lexer.cs  m1Lexer.interp  m1Listener.cs  m1Parser.cs  m1Visitor.cs
mep/: CMakeLists.txt
mep/inc/: ast.hpp  evaluator.hpp  lexer.hpp  parser.hpp  visitor.hpp
mep/src/: lexer.cpp  parser.cpp
tests/: CMakeLists.txt  common_evaluator_tests.cpp  common_lexer_tests.cpp  common_parser_tests.cpp  decimal_lexer_tests.cpp  evaluator_insane_tests.cpp  mock-parser.hpp  utils.hpp
